--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div class="col-12 col-sm-6" id="heroInfo">
 
             </div>
-            <div class="col-12 col-sm-6">
-
+            <div class="col-12 col-sm-6" id="chartContainer" style="height: 300px; width: 100%;">
+            
             </div>
         </div>
 
