--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- 
+    Autor: Jairo Rodriguez
+    Fecha: 06-03-2022
+    version: 1.0.0.0
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,16 +11,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encuentra tu heroe</title>
+    <title>Desafio encuentra tu heroe By Maxter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="shortcut icon" href="assets\img\favicon.ico">
 </head>
 
 <body>
-    <span>Desafio encuentra tu heroe By Maxter</span>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>                    
+                </ul>
+                <form class="d-flex" method="get" action="https://www.google.com/search" target="_blank">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
     <header class="text-center">
         <h1>Encuentra tu super heroe</h1>
-        <p>dddd</p>
+        <p>--------------------------</p>
     </header>
 
     <section>
@@ -22,10 +50,10 @@
         <form>
 
             <div class="row w-50 m-auto">
-                <div class="col-12 col-sm-6">
-                    <label>Increse ID de su super heroe</label>
+                <div class="col-12 col-sm-6 col-md-6">
+                    <label>Ingrese el ID de su super heroe</label>
                 </div>
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-6 col-md-6">
                     <input class="form-control" id="heroeInput">
                 </div>
             </div>
@@ -39,25 +67,24 @@
     <section>
 
         <!-- Seccion dinamica donde se muestra el resultado de la consulta -->
-        <div class="row w-50 m-auto">
+        <div class="row m-5">
             <div class="col-12 col-sm-6" id="heroInfo">
 
             </div>
-            <div class="col-12 col-sm-6" id="chartContainer" style="height: 300px; width: 100%;">
-            
+            <!--  -->
+            <div class="col-12 col-sm-6" id="chartContainer" style="height: 450px; width: 50%;">
+
             </div>
         </div>
 
     </section>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"
-        integrity="sha512-FJ2OYvUIXUqCcPf1stu+oTBlhn54W0UisZB/TNrZaVMHHhYvLBV9jMbvJYtvDe5x/WVaoXZ6KB+Uqe5hT2vlyA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
